# semiprof

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  todo.md
examples/: CMakeLists.txt  omp.cpp
include/semiprof/: semiprof.hpp
src/: profiler.cpp
